# egt-energymon

./: CMakeLists.txt
include/: energymon.h  mainwin.h  pac193x.h
src/: energymon.cpp  main.cpp  mainwin.cpp  pac193x.cpp
